--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <input type="email" placeholder="Your Email Address">
           <button>Get Started</button>
         </form>
-<img src="./images/Group 83.png" alt="">
+<img src="./images/Group 83.png" alt="" class="herimg">
 <span>1,600 people requested access a visit in last 24 hours</span>
       </div>
       <div class="col-md-12 col-md-12 col-lg-6 p-0 my-0">
@@ -132,7 +132,7 @@
     <!-- end of early access section  -->
 
     <!-- feature image section starts  -->
-     <section style="padding-left: 150px;">
+     <section class="feature">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 featimg">
           <img src="./images/Feature Image.png" alt="">
