--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="#">Libary</a>
       </li>
     </ul>
-    <form class="d-flex">
+    <form class="d-flex btns" >
       <button type="button" class="btn btn-outline-light btn-lg sgin">Sign in</button>
       <button type="button" class="btn btn-danger btn-lg sgup">Sign up</button>
     </form>
